CREATE TABLE users (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    phone VARCHAR(13) NOT NULL,
    password VARCHAR NOT NULL,
    name VARCHAR(30) NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_users_phone UNIQUE (phone)
);

CREATE TABLE stores (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    owner_id BIGINT NOT NULL,
    name VARCHAR(50) NOT NULL,
    category VARCHAR(30) NOT NULL,
    address VARCHAR(200),
    invite_code VARCHAR(6) NOT NULL,
    approval_required BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_stores_owner FOREIGN KEY (owner_id) REFERENCES users (id),
    CONSTRAINT uq_stores_invite_code UNIQUE (invite_code)
);

CREATE INDEX idx_stores_owner_id ON stores (owner_id);

CREATE TABLE store_members (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    store_id BIGINT NOT NULL,
    user_id BIGINT NOT NULL,
    role VARCHAR(20) NOT NULL DEFAULT 'WORKER',
    status VARCHAR(20) NOT NULL DEFAULT 'PENDING',
    requested_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    joined_at TIMESTAMP,
    left_at TIMESTAMP,
    CONSTRAINT fk_store_members_store FOREIGN KEY (store_id) REFERENCES stores (id),
    CONSTRAINT fk_store_members_user FOREIGN KEY (user_id) REFERENCES users (id),
    CONSTRAINT uq_store_members_store_user UNIQUE (store_id, user_id),
    CONSTRAINT ck_store_members_role CHECK (role IN ('MANAGER', 'WORKER')),
    CONSTRAINT ck_store_members_status CHECK (status IN ('PENDING', 'ACTIVE', 'REJECTED', 'LEFT'))
);

CREATE INDEX idx_store_members_user_status ON store_members (user_id, status);
