CREATE TABLE shift_templates (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    store_id BIGINT NOT NULL,
    name VARCHAR(10) NOT NULL,
    start_time TIME NOT NULL,
    end_time TIME NOT NULL,
    required_count INTEGER NOT NULL DEFAULT 1,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_shift_templates_store FOREIGN KEY (store_id) REFERENCES stores (id),
    CONSTRAINT uq_shift_templates_store_name UNIQUE (store_id, name),
    CONSTRAINT ck_shift_templates_time CHECK (end_time > start_time),
    CONSTRAINT ck_shift_templates_required_count CHECK (required_count BETWEEN 1 AND 9),
    CONSTRAINT ck_shift_templates_name CHECK (char_length(trim(name)) BETWEEN 1 AND 10 AND position('|' IN name) = 0)
);

CREATE TABLE shifts (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    store_id BIGINT NOT NULL,
    worker_id BIGINT,
    start_at TIMESTAMP NOT NULL,
    end_at TIMESTAMP NOT NULL,
    position VARCHAR(10),
    created_by BIGINT NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP,
    CONSTRAINT fk_shifts_store FOREIGN KEY (store_id) REFERENCES stores (id),
    CONSTRAINT fk_shifts_worker FOREIGN KEY (worker_id) REFERENCES users (id),
    CONSTRAINT fk_shifts_created_by FOREIGN KEY (created_by) REFERENCES users (id),
    CONSTRAINT ck_shifts_time CHECK (end_at > start_at)
);

CREATE INDEX idx_shifts_store_start_at ON shifts (store_id, start_at);
CREATE INDEX idx_shifts_worker_start_at ON shifts (worker_id, start_at);

INSERT INTO shift_templates (store_id, name, start_time, end_time, required_count)
SELECT id, '오픈', TIME '10:00', TIME '16:00', 1 FROM stores
UNION ALL
SELECT id, '미들', TIME '12:00', TIME '18:00', 1 FROM stores
UNION ALL
SELECT id, '마감', TIME '16:00', TIME '22:00', 1 FROM stores;
