CREATE TABLE availabilities (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    day_of_week SMALLINT NOT NULL,
    start_time TIME NOT NULL,
    end_time TIME NOT NULL,
    CONSTRAINT fk_availabilities_user FOREIGN KEY (user_id) REFERENCES users (id),
    CONSTRAINT uq_availabilities_user_day UNIQUE (user_id, day_of_week),
    CONSTRAINT ck_availabilities_day CHECK (day_of_week BETWEEN 0 AND 6),
    CONSTRAINT ck_availabilities_time CHECK (end_time > start_time)
);
