CREATE TABLE store_notices (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    store_id BIGINT NOT NULL,
    notice_date DATE NOT NULL,
    content VARCHAR(160) NOT NULL,
    created_by BIGINT NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_store_notices_store FOREIGN KEY (store_id) REFERENCES stores (id),
    CONSTRAINT fk_store_notices_created_by FOREIGN KEY (created_by) REFERENCES users (id),
    CONSTRAINT ck_store_notices_content CHECK (char_length(trim(content)) BETWEEN 1 AND 160)
);

CREATE INDEX idx_store_notices_store_date ON store_notices (store_id, notice_date);
