CREATE TABLE shift_requests (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    type VARCHAR(20) NOT NULL,
    mode VARCHAR(20) NOT NULL DEFAULT 'PUBLIC',
    scope VARCHAR(20) NOT NULL DEFAULT 'STORE',
    shift_id BIGINT NOT NULL,
    requester_id BIGINT NOT NULL,
    reason VARCHAR(100),
    status VARCHAR(30) NOT NULL DEFAULT 'OPEN',
    confirmed_at TIMESTAMP,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP,
    CONSTRAINT fk_shift_requests_shift FOREIGN KEY (shift_id) REFERENCES shifts (id),
    CONSTRAINT fk_shift_requests_requester FOREIGN KEY (requester_id) REFERENCES users (id),
    CONSTRAINT ck_shift_requests_type CHECK (type IN ('COVER', 'EXCHANGE', 'OPEN_SHIFT')),
    CONSTRAINT ck_shift_requests_mode CHECK (mode IN ('PUBLIC', 'DIRECT')),
    CONSTRAINT ck_shift_requests_scope CHECK (scope IN ('STORE', 'OWNER_STORES')),
    CONSTRAINT ck_shift_requests_status CHECK (status IN ('OPEN', 'PENDING_APPROVAL', 'CONFIRMED', 'CANCELED', 'EXPIRED'))
);

CREATE INDEX idx_shift_requests_shift_status ON shift_requests (shift_id, status);
CREATE INDEX idx_shift_requests_status_type ON shift_requests (status, type);
CREATE INDEX idx_shift_requests_requester ON shift_requests (requester_id);
CREATE UNIQUE INDEX uq_shift_requests_active_shift
    ON shift_requests (shift_id)
    WHERE status IN ('OPEN', 'PENDING_APPROVAL');

CREATE TABLE request_available_dates (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    request_id BIGINT NOT NULL,
    available_date DATE NOT NULL,
    CONSTRAINT fk_request_available_dates_request FOREIGN KEY (request_id) REFERENCES shift_requests (id),
    CONSTRAINT uq_request_available_dates_request_date UNIQUE (request_id, available_date)
);

CREATE INDEX idx_request_available_dates_date ON request_available_dates (available_date);
